2002-07-16  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated

2002-07-15  Paolo Maggi  <maggi@athena.polito.it>

	[ gedit 2.0.1 released ]

2002-07-15  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in:
	* README: bump version to 2.0.1

2002-07-12  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated

2002-07-10  Paolo Maggi  <maggi@athena.polito.it>

	* data/gedit.schemas.in: 
	s/GEDIT_SAVE_CURRENT_LOCALE_WHEN_POSSIBLE/GEDIT_SAVE_CURRENT_LOCALE_IF_POSSIBLE,
	added GEDIT_SAVE_ORIGINAL_FILE_ENCODING_IF_POSSIBLE_NCL description

	* TODO: Upated

2002-07-09  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated

2002-07-09  Paolo Maggi  <maggi@athena.polito.it>

	* Makefile.am: fixed ('make distcheck' works again)

	* data/Makefile.am: ditto
	
2002-07-09  Mark McLoughlin  <mark@skynet.ie>

	* data/gedit.desktop.in: use X-GNOME-DocPath instead
	of DocPath.

2002-07-08  Paolo Maggi  <maggi@athena.polito.it>

	* Moved gedit.schemas, gedit.1, gedit.desktop.in, gedit.spec.in,
	gedit.keys.in in the data dir

2002-07-08  Paolo Maggi  <maggi@athena.polito.it>

	* .cvsignore: Updated

2002-07-05  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated

	* gedit.1: added Federico to the Authors list

2002-07-04  Paolo Maggi  <maggi@athena.polito.it>

	* TODO: Updated

2002-07-04  Paolo Maggi  <maggi@athena.polito.it>

	* gedit.schemas: s/GEdit/gedit, change the backup_copy_extension
	default to ~

2002-07-03  Federico Mena Quintero  <federico@ximian.com>

	* gedit.schemas: Rewrote the schema file for the new preferences
	setup.  Should be the last part to fix #84535.

2002-07-03  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in: now gedit depends on eel-2.0 

2002-06-19  Paolo Maggi  <maggi@athena.polito.it>

	[ gedit 2.0.0 released ]

2002-06-19  Paolo Maggi  <maggi@athena.polito.it>

	* help/C/gedit.xml
	* help/C/gedit-C.xml
	* help/C/figures/gedit_window.png: updated (thanks to 
	Irene Ryan)

2002-06-14  Paolo Maggi  <maggi@athena.polito.it>
