@@ -1,3 +1,8 @@
+2002-07-17  James Willcox  <jwillcox@cs.indiana.edu>
+
+	* */Makefile.am:  Added LDFLAGS for the "-avoid-version" and
+	"-module" libtool options.
+
 2002-07-15  James Willcox  <jwillcox@cs.indiana.edu>
 
 	* cvschangelog/cvschangelog.c (is_chnagelog):
