@@ -1,3 +1,8 @@
+2002-07-17  James Willcox  <jwillcox@cs.indiana.edu>
+
+	* configure.in:  Added AM_DISABLE_STATIC, which disables the building
+	of static libraries (for plugins).
+
 2002-07-16  Paolo Maggi  <maggi@athena.polito.it>
 
 	* TODO: Updated
